<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.coursera.meera.activitycycle.NextActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oncreate"
        android:id="@+id/create"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onstart"
        android:id="@+id/start"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/create"
        android:layout_alignLeft="@+id/create"
        android:layout_alignStart="@+id/create" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onrestart"
        android:id="@+id/restart"
        android:layout_below="@+id/start"
        android:layout_alignLeft="@+id/resume"
        android:layout_alignStart="@+id/resume"
        android:layout_marginTop="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onresume"
        android:id="@+id/resume"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_activity"
        android:id="@+id/button"
        android:layout_below="@+id/resume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp" />

</RelativeLayout>
